reduced docker image size