@@ -1,11 +1,32 @@
+# Build .jar
 FROM maven:3.8.5-openjdk-17-slim as builder
+
 WORKDIR /app
 COPY pom.xml .
 RUN mvn dependency:go-offline
 COPY src/ ./src/
 RUN mvn clean package
 
-FROM openjdk:17-slim
+# Create a custom jre using jlink
+FROM eclipse-temurin:17 as jre-build
+
+RUN $JAVA_HOME/bin/jlink \
+         --add-modules ALL-MODULE-PATH \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /javaruntime
+
+# Setting the env on base image
+FROM debian:buster-slim
+
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
+COPY --from=jre-build /javaruntime $JAVA_HOME
+
+
+# Copy the .jar and running
 RUN mkdir /app
 WORKDIR /app
 COPY --from=builder /app/target/*.jar app.jar
